@@ -31,16 +31,16 @@ endif
 xdbedizzy_SOURCES =	\
         xdbedizzy.c
 
-appman_SOURCES = \
+appman_PRE = \
         xdbedizzy.man
 
 EXTRA_DIST = xdbedizzy.sgml
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
